fix: style for page-link button (pagination-jump)

--- a/assets/scss/partials/pagination.scss
+++ b/assets/scss/partials/pagination.scss
@@ -22,6 +22,9 @@
     .page-link {
         padding: var(--spacing-sm) 0;
         margin: 0;
+        border: 0;
+        background: none;
+        font: inherit;
         border-radius: 0;
         display: flex;
         align-items: center;
